--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,11 +13,12 @@
   file:
     path: /var/log/vuls
     state: directory
-    mode: 0700
+    mode: 0755
+    owner: '{{ vuls_user }}'
 
 - name: mkdir gopath
   file:
-    path: '{{ vuls_path }}'
+    path: '{{ go_path }}'
     state: directory
   become: false
 
@@ -34,57 +35,82 @@
 - name: set envrc
   copy:
     src: src/.envrc
-    dest: '{{ vuls_path }}'
+    dest: '{{ go_path }}'
     mode: 0755
     force: yes
   become: false
 
 - name: mkdir kotakanbe
-  shell: 'mkdir -p {{ vuls_path  }}/src/github.com/kotakanbe/go-cve-dictionary'
-  args:
-    executable: /bin/bash
+  file:
+    path: '{{ go_path  }}/src/github.com/kotakanbe/go-cve-dictionary'
+    state: directory
+    mode: 0755
   become: false
 
 - name: install go-cve-dictionary
   git:
     repo: https://github.com/kotakanbe/go-cve-dictionary.git
-    dest: '{{ vuls_path }}/src/github.com/kotakanbe/go-cve-dictionary'
+    dest: '{{ go_path }}/src/github.com/kotakanbe/go-cve-dictionary'
   become: false
 
 - name: make cve
   shell: make install
   args:
-    chdir: '{{ vuls_path }}/src/github.com/kotakanbe/go-cve-dictionary'
+    chdir: '{{ go_path }}/src/github.com/kotakanbe/go-cve-dictionary'
     executable: /bin/bash
   become: false
 
 - name: install jvn
   shell: for i in `seq 2002 $(date +"%Y")`; do go-cve-dictionary fetchnvd -years $i; done
   args:
-    chdir: '{{ vuls_path }}'
+    chdir: '{{ go_path }}'
     executable: /bin/bash
   become: false
 
 - name: install jvn japanese
   shell: for i in `seq 1998 $(date +"%Y")`; do go-cve-dictionary fetchjvn -years $i; done
   args:
-    chdir: '{{ vuls_path }}'
+    chdir: '{{ go_path }}'
+    executable: /bin/bash
+  become: false
+
+- name: mkdir goval-dictionary
+  file:
+    path: '{{ go_path }}/src/github.com/kotakanbe/goval-dictionary'
+    state: directory
+    mode: 0755
+  become: false
+
+- name: install goval-dictionary
+  git:
+    repo: https://github.com/kotakanbe/goval-dictionary.git
+    dest: '{{ go_path }}/src/github.com/kotakanbe/goval-dictionary'
+  become: false
+
+
+- name: make goval-dictionary
+  shell: make install
+  args:
+    chdir: '{{ go_path }}/src/github.com/kotakanbe/goval-dictionary'
     executable: /bin/bash
   become: false
 
 - name: mkdir vuls
-  shell: 'mkdir -p {{ vuls_path }}/src/github.com/future-architect/vuls'
+  file:
+    path: '{{ go_path }}/src/github.com/future-architect/vuls'
+    state: directory
+    mode: 0755
   become: false
 
 - name: install vuls
   git:
     repo: https://github.com/future-architect/vuls.git
-    dest: '{{ vuls_path }}/src/github.com/future-architect/vuls'
+    dest: '{{ go_path }}/src/github.com/future-architect/vuls'
   become: false
 
 - name: make vuls
   shell: make install
   args:
-    chdir: '{{ vuls_path }}/src/github.com/future-architect/vuls'
+    chdir: '{{ go_path }}/src/github.com/future-architect/vuls'
     executable: /bin/bash
   become: false
