--- a/docker/Dockerfile-centos
+++ b/docker/Dockerfile-centos
@@ -7,4 +7,5 @@ RUN yum -y update && \
 
 WORKDIR /ansible
 COPY ./ /ansible
+RUN ansible-galaxy install YasushiKobayashi.golang -p roles
 RUN ansible-playbook -i 'localhost' -c 'local' main.yml
