--- a/main.yml
+++ b/main.yml
@@ -1,5 +1,6 @@
 #!/usr/bin/env ansible-playbook -i hosts
-- hosts: master
+- hosts: localhost
+  connection: local
   vars:
     - vuls_path: ~/vuls
     - env: test
