--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_install:
   - docker pull centos:6
 
 script:
-  - docker build -f docker/Dockerfile-centos -t centos --build-arg GOPATH=$HOME/vuls .
-  - docker build -f docker/Dockerfile-amazone -t amazone --build-arg GOPATH=$HOME/vuls .
+  - docker build -f docker/Dockerfile-centos -t centos .
+  - docker build -f docker/Dockerfile-amazone -t amazone .
 
 notifications:
   slack:
